--- a/MFCTest10_15.vcxproj
+++ b/MFCTest10_15.vcxproj
@@ -29,7 +29,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -73,9 +73,9 @@
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeader>Create</PrecompiledHeader>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
-      <AdditionalIncludeDirectories>D:\work\dependency\include;D:\work\14400-3.6.5.33_SOFTWARE_Go2_SDK\include;D:\work\appending\glaux\include;$(PYLON_DEV_DIR)\include;D:\app\14400-3.6.5.33_SOFTWARE_Go2_SDK\14400-3.6.5.33_SOFTWARE_Go2_SDK\include;$(PYLON_ROOT)\include;$(PYLON_GENICAM_ROOT)\library\CPP\include;$(PYLONC_ROOT)\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);D:\work\dependency\include;D:\work\14400-3.6.5.33_SOFTWARE_Go2_SDK\include;D:\work\appending\glaux\include;$(PYLON_DEV_DIR)\include;D:\app\14400-3.6.5.33_SOFTWARE_Go2_SDK\14400-3.6.5.33_SOFTWARE_Go2_SDK\include;$(PYLON_ROOT)\include;$(PYLON_GENICAM_ROOT)\library\CPP\include;$(PYLONC_ROOT)\include</AdditionalIncludeDirectories>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <ResourceCompile>
@@ -156,6 +156,9 @@
     </ClCompile>
     <ClCompile Include="MyButton.cpp" />
     <ClCompile Include="POINT3.cpp" />
+    <ClCompile Include="scanCONTROL2900\DllLoader.cpp" />
+    <ClCompile Include="scanCONTROL2900\GetProfiles_Callback.cpp" />
+    <ClCompile Include="scanCONTROL2900\InterfaceLLT_2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
       </PrecompiledHeader>
@@ -181,6 +184,12 @@
     <ClInclude Include="MyButton.h" />
     <ClInclude Include="POINT3.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="scanCONTROL2900\C_InterfaceLLT_2.h" />
+    <ClInclude Include="scanCONTROL2900\DllLoader.h" />
+    <ClInclude Include="scanCONTROL2900\GetProfiles_Callback.h" />
+    <ClInclude Include="scanCONTROL2900\InterfaceLLT_2.h" />
+    <ClInclude Include="scanCONTROL2900\scanControlDataTypes.h" />
+    <ClInclude Include="scanCONTROL2900\S_InterfaceLLT_2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Texture.h" />
   </ItemGroup>
