解决应用按钮文字消失问题

--- a/MFCTest10_15.rc
+++ b/MFCTest10_15.rc
@@ -183,7 +183,7 @@ IDD_CONTROLVIEW DIALOGEX 0, 0, 317, 417
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 9, "MS Shell Dlg", 400, 0, 0x86
 BEGIN
-    PUSHBUTTON      "应用",IDC_BUTTON2,30,303,37,12,BS_ICON
+    PUSHBUTTON      "应用",IDC_BUTTON2,30,303,37,12
     PUSHBUTTON      "取消",IDC_BUTTON1,79,303,37,12
     PUSHBUTTON      "打开激光",IDC_BUTTON3,16,26,45,12
     PUSHBUTTON      "关闭激光",IDC_BUTTON4,77,26,45,12,WS_DISABLED
