调整加速度和gps界面

--- a/MFCTest10_15.rc
+++ b/MFCTest10_15.rc
@@ -240,7 +240,7 @@ END
 IDD_SOCK_DIALOG DIALOGEX 0, 0, 390, 277
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
-CAPTION "UA5248 采集仪示例程序             技术支持：http://www.addatech.net"
+CAPTION "加速度"
 FONT 9, "宋体", 0, 0, 0x1
 BEGIN
     LTEXT           "本机IP：",IDC_STATIC,13,13,35,12
@@ -272,7 +272,7 @@ END
 IDD_VC6_DIALOG DIALOGEX 0, 0, 569, 382
 STYLE DS_SETFONT | DS_CENTER | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
-CAPTION "CnComm测试程序"
+CAPTION "GPS"
 FONT 9, "宋体", 0, 0, 0x1
 BEGIN
     CONTROL         "Tab1",IDC_TAB,"SysTabControl32",TCS_TOOLTIPS,0,1,562,350
@@ -436,14 +436,14 @@ BEGIN
     PUSHBUTTON      "取消",IDCANCEL,210,170,50,14
 END
 
-IDD_DIALOG_CN_COMM DIALOG 0, 0, 558, 357
+IDD_DIALOG_CN_COMM DIALOGEX 0, 0, 558, 357
 STYLE DS_SETFONT | WS_CHILD
-FONT 9, "宋体"
+FONT 9, "宋体", 0, 0, 0x0
 BEGIN
     EDITTEXT        IDC_EDIT_RX,152,153,397,193,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
     EDITTEXT        IDC_EDIT_TX,210,9,339,83,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
-    PUSHBUTTON      "新建实例",IDC_BUTTON_NEW_INSTANCE,7,117,43,14
-    PUSHBUTTON      "删除实例",IDC_BUTTON_FREE_INSTANCE,53,117,43,14
+    PUSHBUTTON      "新建实例",IDC_BUTTON_NEW_INSTANCE,7,117,43,14,NOT WS_VISIBLE
+    PUSHBUTTON      "删除实例",IDC_BUTTON_FREE_INSTANCE,53,117,43,14,NOT WS_VISIBLE
     COMBOBOX        IDC_COMBO_COM_PORT,35,10,50,122,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBO_PARITY,35,45,50,122,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBO_BAUDRATE,35,27,50,122,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
@@ -456,16 +456,16 @@ BEGIN
     CONTROL         "16进制",IDC_CHECK_TX_HEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,153,46,40,10
     CONTROL         "周期发送",IDC_CHECK_AUTO_SEND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,153,64,48,10
     COMBOBOX        IDC_COMBO_FLOW_CTRL,35,99,50,122,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "DCB",IDC_BUTTON_DCB,92,26,50,14,WS_DISABLED
+    PUSHBUTTON      "DCB",IDC_BUTTON_DCB,92,26,50,14,NOT WS_VISIBLE | WS_DISABLED
     LTEXT           "毫秒",IDC_STATIC,186,83,17,8
     CONTROL         "16进制",IDC_CHECK_RX_HEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,210,137,35,10
-    PUSHBUTTON      "发送文件",IDC_BUTTON_SEND_FILE,209,98,50,14,WS_DISABLED
-    EDITTEXT        IDC_EDIT_FILE_FOR_SEND,266,98,143,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "浏览",IDC_BUTTON_BROWER_TX,414,98,50,14
-    PUSHBUTTON      "装载文件",IDC_BUTTON_LOAD_FILE,153,98,50,14
+    PUSHBUTTON      "发送文件",IDC_BUTTON_SEND_FILE,209,98,50,14,NOT WS_VISIBLE | WS_DISABLED
+    EDITTEXT        IDC_EDIT_FILE_FOR_SEND,266,98,143,14,ES_AUTOHSCROLL | NOT WS_VISIBLE
+    PUSHBUTTON      "浏览",IDC_BUTTON_BROWER_TX,414,98,50,14,NOT WS_VISIBLE
+    PUSHBUTTON      "装载文件",IDC_BUTTON_LOAD_FILE,153,98,50,14,NOT WS_VISIBLE
     PUSHBUTTON      "浏览",IDC_BUTTON_BROWER_RX,494,135,50,14
-    PUSHBUTTON      "超时",IDC_BUTTON_TIMEOUTS,92,44,50,14,WS_DISABLED
-    PUSHBUTTON      "属性",IDC_BUTTON_PROPERTIES,92,62,50,14,WS_DISABLED
+    PUSHBUTTON      "超时",IDC_BUTTON_TIMEOUTS,92,44,50,14,NOT WS_VISIBLE | WS_DISABLED
+    PUSHBUTTON      "属性",IDC_BUTTON_PROPERTIES,92,62,50,14,NOT WS_VISIBLE | WS_DISABLED
     EDITTEXT        IDC_EDIT_FILE_FOR_RECV,348,135,143,14,ES_AUTOHSCROLL
     LTEXT           "串口",IDC_STATIC,7,12,16,8
     LTEXT           "波特率",IDC_STATIC,7,29,25,8
@@ -484,29 +484,29 @@ BEGIN
     EDITTEXT        IDC_EDIT_TX_BUFFER,104,265,39,14,ES_RIGHT | ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "RX队列",IDC_STATIC,7,248,25,8
     LTEXT           "RX缓冲",IDC_STATIC,78,248,24,8
-    GROUPBOX        "配置:关闭时有效",IDC_STATIC,7,138,136,48,WS_GROUP
-    CONTROL         "EN_THREAD",IDC_CHECK_EN_THREAD,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_GROUP | WS_TABSTOP,12,148,52,10
-    CONTROL         "EN_OVERLAPPED",IDC_CHECK_EN_OVERLAPPED,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_GROUP | WS_TABSTOP,76,148,63,10
-    CONTROL         "EN_TX_BUFFER",IDC_CHECK_EN_TX_BUFFER,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_GROUP | WS_TABSTOP,76,160,64,10
-    CONTROL         "EN_RX_BUFFER",IDC_CHECK_EN_RX_BUFFER,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_GROUP | WS_TABSTOP,12,160,64,10
-    CONTROL         "EN_TX_THREAD",IDC_CHECK_EN_TX_THREAD,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_GROUP | WS_TABSTOP,12,172,64,10
-    CONTROL         "EN_RX_THREAD",IDC_CHECK_EN_RX_THREAD,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_GROUP | WS_TABSTOP,76,172,64,10
-    CONTROL         "DTR",IDC_CHECK_DTR,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_TABSTOP,12,203,28,10
-    CONTROL         "BREAK",IDC_CHECK_BREAK,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_TABSTOP,42,203,32,10
-    CONTROL         "RTS",IDC_CHECK_RTS,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_TABSTOP,12,218,28,10
-    CONTROL         "XON",IDC_CHECK_XON,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_TABSTOP,42,218,30,10
-    GROUPBOX        "输出信号",IDC_STATIC,7,191,70,44
-    CONTROL         "RLSD",IDC_CHECK_RLSD,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_TABSTOP,82,203,32,10
-    CONTROL         "RING",IDC_CHECK_RING,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_TABSTOP,82,218,32,10
-    CONTROL         "DSR",IDC_CHECK_DSR,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_TABSTOP,114,203,23,10
-    CONTROL         "CTS",IDC_CHECK_CTS,"Button",BS_AUTOCHECKBOX | BS_FLAT | WS_DISABLED | WS_TABSTOP,114,218,23,10
-    GROUPBOX        "调制解调信号",IDC_STATIC,76,191,67,44
+    GROUPBOX        "配置:关闭时有效",IDC_STATIC,7,138,136,48,NOT WS_VISIBLE | WS_GROUP
+    CONTROL         "EN_THREAD",IDC_CHECK_EN_THREAD,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_GROUP | WS_TABSTOP,12,148,52,10
+    CONTROL         "EN_OVERLAPPED",IDC_CHECK_EN_OVERLAPPED,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_GROUP | WS_TABSTOP,76,148,63,10
+    CONTROL         "EN_TX_BUFFER",IDC_CHECK_EN_TX_BUFFER,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_GROUP | WS_TABSTOP,76,160,64,10
+    CONTROL         "EN_RX_BUFFER",IDC_CHECK_EN_RX_BUFFER,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_GROUP | WS_TABSTOP,12,160,64,10
+    CONTROL         "EN_TX_THREAD",IDC_CHECK_EN_TX_THREAD,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_GROUP | WS_TABSTOP,12,172,64,10
+    CONTROL         "EN_RX_THREAD",IDC_CHECK_EN_RX_THREAD,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_GROUP | WS_TABSTOP,76,172,64,10
+    CONTROL         "DTR",IDC_CHECK_DTR,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,12,203,28,10
+    CONTROL         "BREAK",IDC_CHECK_BREAK,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,42,203,32,10
+    CONTROL         "RTS",IDC_CHECK_RTS,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,12,218,28,10
+    CONTROL         "XON",IDC_CHECK_XON,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,42,218,30,10
+    GROUPBOX        "输出信号",IDC_STATIC,7,191,70,44,NOT WS_VISIBLE
+    CONTROL         "RLSD",IDC_CHECK_RLSD,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,82,203,32,10
+    CONTROL         "RING",IDC_CHECK_RING,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,82,218,32,10
+    CONTROL         "DSR",IDC_CHECK_DSR,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,114,203,23,10
+    CONTROL         "CTS",IDC_CHECK_CTS,"Button",BS_AUTOCHECKBOX | BS_FLAT | NOT WS_VISIBLE | WS_DISABLED | WS_TABSTOP,114,218,23,10
+    GROUPBOX        "调制解调信号",IDC_STATIC,76,191,67,44,NOT WS_VISIBLE
     LTEXT           "流控制",IDC_STATIC,7,101,25,8
     GROUPBOX        "接收",IDC_STATIC_RX,146,125,408,227
-    LTEXT           "mailto:wushaojian@21cn.com",IDC_STATIC_MAIL,7,307,104,8
-    LTEXT           "http://blog.csdn.net/wujian53",IDC_STATIC_BLOG1,7,323,117,8
-    LTEXT           "http://www.cppblog/com/llbird",IDC_STATIC_BLOG2,7,337,117,8
-    LTEXT           "CnComm 1.5 测试程序",IDC_STATIC,7,293,77,8
+    LTEXT           "mailto:wushaojian@21cn.com",IDC_STATIC_MAIL,7,307,104,8,NOT WS_VISIBLE
+    LTEXT           "http://blog.csdn.net/wujian53",IDC_STATIC_BLOG1,7,323,117,8,NOT WS_VISIBLE
+    LTEXT           "http://www.cppblog/com/llbird",IDC_STATIC_BLOG2,7,337,117,8,NOT WS_VISIBLE
+    LTEXT           "CnComm 1.5 测试程序",IDC_STATIC,7,293,77,8,NOT WS_VISIBLE
     LTEXT           "L",IDC_STATIC_LAMP,23,12,8,8
     LTEXT           "TX队列",IDC_STATIC,7,268,24,8
     LTEXT           "TX缓冲",IDC_STATIC,78,268,24,8
