--- a/MFCTest10_15.vcxproj.filters
+++ b/MFCTest10_15.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="serial\TimeoutsDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="IRIDialog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ControlView.h">
@@ -210,6 +213,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="serial\TimeoutsDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="IRIDialog.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
