--- a/MFCTest10_15.rc
+++ b/MFCTest10_15.rc
@@ -246,7 +246,7 @@ FONT 9, "宋体", 0, 0, 0x1
 BEGIN
     LTEXT           "采集数据：",IDC_STATIC,7,7,41,11
     EDITTEXT        IDC_EDIT_IRI,7,16,330,139,ES_MULTILINE | ES_AUTOHSCROLL
-    PUSHBUTTON      "Button1",IDC_BUTTON1,285,163,50,14
+    PUSHBUTTON      "Button1",IDC_BUTTON1,285,163,50,14,NOT WS_VISIBLE
 END
 
 IDD_VC6_DIALOG DIALOGEX 0, 0, 569, 382
