加速度页面打不开问题

--- a/MFCTest10_15.rc
+++ b/MFCTest10_15.rc
@@ -495,7 +495,7 @@ BEGIN
     CONTROL         "自动转存文件",IDC_CHECK_SAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,283,137,63,10
 END
 
-IDD_SOCK_DIALOG1 DIALOGEX 0, 0, 390, 277
+IDD_SOCK_DIALOG DIALOGEX 0, 0, 390, 277
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "加速度"
@@ -644,7 +644,7 @@ BEGIN
         BOTTOMMARGIN, 352
     END
 
-    IDD_SOCK_DIALOG1, DIALOG
+    IDD_SOCK_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 383
