--- a/MFCTest10_15.rc
+++ b/MFCTest10_15.rc
@@ -245,7 +245,7 @@ CAPTION "IRI"
 FONT 9, "宋体", 0, 0, 0x1
 BEGIN
     LTEXT           "采集数据：",IDC_STATIC,7,7,41,11
-    EDITTEXT        IDC_EDIT_IRI,7,19,563,189,ES_MULTILINE | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_IRI,7,19,563,189,ES_MULTILINE | ES_AUTOHSCROLL | WS_VSCROLL
     PUSHBUTTON      "Button1",IDC_BUTTON1,519,222,50,14,NOT WS_VISIBLE
 END
 
