gps增加最小化按钮

--- a/MFCTest10_15.rc
+++ b/MFCTest10_15.rc
@@ -250,7 +250,7 @@ BEGIN
 END
 
 IDD_VC6_DIALOG DIALOGEX 0, 0, 569, 382
-STYLE DS_SETFONT | DS_CENTER | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "GPS"
 FONT 9, "ËÎÌו", 0, 0, 0x1
