--- a/MFCTest10_15.vcxproj.filters
+++ b/MFCTest10_15.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="IRIDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="GPS_Info.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ControlView.h">
@@ -216,6 +219,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="IRIDialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GPS_Info.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
