--- a/MFCTest10_15.vcxproj.filters
+++ b/MFCTest10_15.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="scanCONTROL2900\RD_Info.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="RDDialog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ControlView.h">
@@ -228,6 +231,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="scanCONTROL2900\RD_Info.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="RDDialog.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
